// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Bottom Navigation/Bottom Navigation Action Playground 1`] = `
<button
  className="MuiButtonBase-root MuiBottomNavigationAction-root"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiBottomNavigationAction-wrapper"
  >
    <i
      aria-hidden={true}
      className="material-icons MuiIcon-root natds-icons natds-icons-filled-default-mockup NatDSIcon-root-3 NatDSIcon-root-4"
    />
    <span
      className="MuiBottomNavigationAction-label NatDSBottomNavigationAction-label-1"
    >
      Label text
    </span>
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;

exports[`Storyshots Components/Bottom Navigation/Bottom Navigation Action With Cancel Icon 1`] = `
<button
  className="MuiButtonBase-root MuiBottomNavigationAction-root MuiBottomNavigationAction-iconOnly"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiBottomNavigationAction-wrapper"
  >
    <i
      aria-hidden={true}
      className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-cancel NatDSIcon-root-3 NatDSIcon-root-4"
    />
    <span
      className="MuiBottomNavigationAction-label NatDSBottomNavigationAction-label-1 MuiBottomNavigationAction-iconOnly"
    >
      Canceled orders
    </span>
  </span>
</button>
`;

exports[`Storyshots Components/Bottom Navigation/Bottom Navigation Action With Cancel Icon And Label 1`] = `
<button
  className="MuiButtonBase-root MuiBottomNavigationAction-root"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiBottomNavigationAction-wrapper"
  >
    <i
      aria-hidden={true}
      className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-cancel NatDSIcon-root-3 NatDSIcon-root-4"
    />
    <span
      className="MuiBottomNavigationAction-label NatDSBottomNavigationAction-label-1"
    >
      Canceled orders
    </span>
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;

exports[`Storyshots Components/Bottom Navigation/Bottom Navigation Action With Check Icon 1`] = `
<button
  className="MuiButtonBase-root MuiBottomNavigationAction-root MuiBottomNavigationAction-iconOnly"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiBottomNavigationAction-wrapper"
  >
    <i
      aria-hidden={true}
      className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-check NatDSIcon-root-3 NatDSIcon-root-4"
    />
    <span
      className="MuiBottomNavigationAction-label NatDSBottomNavigationAction-label-1 MuiBottomNavigationAction-iconOnly"
    >
      Confirmed orders
    </span>
  </span>
</button>
`;

exports[`Storyshots Components/Bottom Navigation/Bottom Navigation Action With Check Icon And Label 1`] = `
<button
  className="MuiButtonBase-root MuiBottomNavigationAction-root"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiBottomNavigationAction-wrapper"
  >
    <i
      aria-hidden={true}
      className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-check NatDSIcon-root-3 NatDSIcon-root-4"
    />
    <span
      className="MuiBottomNavigationAction-label NatDSBottomNavigationAction-label-1"
    >
      Confirmed orders
    </span>
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;

exports[`Storyshots Components/Bottom Navigation/Bottom Navigation Action With Home Icon 1`] = `
<button
  className="MuiButtonBase-root MuiBottomNavigationAction-root MuiBottomNavigationAction-iconOnly"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiBottomNavigationAction-wrapper"
  >
    <i
      aria-hidden={true}
      className="material-icons MuiIcon-root natds-icons natds-icons-outlined-navigation-home NatDSIcon-root-3 NatDSIcon-root-4"
    />
    <span
      className="MuiBottomNavigationAction-label NatDSBottomNavigationAction-label-1 MuiBottomNavigationAction-iconOnly"
    >
      Home
    </span>
  </span>
</button>
`;

exports[`Storyshots Components/Bottom Navigation/Bottom Navigation Action With Home Icon And Label 1`] = `
<button
  className="MuiButtonBase-root MuiBottomNavigationAction-root"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiBottomNavigationAction-wrapper"
  >
    <i
      aria-hidden={true}
      className="material-icons MuiIcon-root natds-icons natds-icons-outlined-navigation-home NatDSIcon-root-3 NatDSIcon-root-4"
    />
    <span
      className="MuiBottomNavigationAction-label NatDSBottomNavigationAction-label-1"
    >
      Home
    </span>
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;

exports[`Storyshots Components/Bottom Navigation/Bottom Navigation Action With Play Icon 1`] = `
<button
  className="MuiButtonBase-root MuiBottomNavigationAction-root MuiBottomNavigationAction-iconOnly"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiBottomNavigationAction-wrapper"
  >
    <i
      aria-hidden={true}
      className="material-icons MuiIcon-root natds-icons natds-icons-filled-media-play NatDSIcon-root-3 NatDSIcon-root-4"
    />
    <span
      className="MuiBottomNavigationAction-label NatDSBottomNavigationAction-label-1 MuiBottomNavigationAction-iconOnly"
    >
      Training videos
    </span>
  </span>
</button>
`;

exports[`Storyshots Components/Bottom Navigation/Bottom Navigation Action With Play Icon And Label 1`] = `
<button
  className="MuiButtonBase-root MuiBottomNavigationAction-root"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiBottomNavigationAction-wrapper"
  >
    <i
      aria-hidden={true}
      className="material-icons MuiIcon-root natds-icons natds-icons-filled-media-play NatDSIcon-root-3 NatDSIcon-root-4"
    />
    <span
      className="MuiBottomNavigationAction-label NatDSBottomNavigationAction-label-1"
    >
      Training videos
    </span>
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;
